# ai-interview-codex

./: .gitignore  INTERVIEW-PREP-COMPLETE-INDEX.md  LLM-ML-SYSTEM-DESIGN-MASTER-GUIDE.md  MAKE-PUBLIC-CHECKLIST.md  MASTER-STUDY-SCHEDULE.md  NOTEBOOK-GUIDE.md  README-PRIVATE-BACKUP.md  README.md  ai-interview-codex.code-workspace  attention-mechanisms-comprehensive-guide.md  bagging-ensemble-methods-guide.md  boosting-ensemble-methods-guide.md  decision-trees-complete-guide.md  leadership-stories-template.md  ml-coding-problems.ipynb  ml-coding-problems.md  questions-for-interviewers.md  technical-cheatsheet.md  transformer-architecture-complete-guide.md
agentic-ai/: 01-anthropic-patterns-interactive.ipynb  02-langgraph-workflows-interactive.ipynb  03-langchain-agents-react.ipynb  04-multi-agent-systems.ipynb  05-research-agents-deep-reasoning.ipynb  06-agentic-rag-patterns.ipynb  07-framework-comparison-guide.md  README.md  agent-memory-architecture-guide.md  agentic-ai-iterative-interview.md  agentic-ai-system-design-interview.md  cobol-to-sql-conversion-iterative-part2.md  cobol-to-sql-conversion-iterative.md  code-review-ai-iterative-interview.md  create_notebook.py  document-compliance-multi-agent-iterative.md  linkedin-post-mcp-guide.md  mcp-enterprise-banking-use-case.md  mcp-hands-on-implementation.ipynb  mcp-interview-preparation-guide.md  mcp-production-best-practices.md
deep-learning/: BERT-TRAINING-AND-CLASSIFICATION.md  LEARNING-PATH.md  neural-network-components-from-scratch.ipynb  step-0-start-here.md  step-1-attention-visual-deep-dive.md  step-2-code-examples.md  step-3-bert-vs-gpt-vs-t5.md  step-4-hands-on-exercises.md  step-5-interactive-demo.html
dsa/: dsa-bonus-patterns.ipynb  dsa-bonus-patterns.md  dsa-day1-arrays-searching.ipynb  dsa-day1-arrays-searching.md  dsa-day2-sorting.ipynb  dsa-day2-sorting.md  dsa-day3-two-pointers.ipynb  dsa-day3-two-pointers.md  dsa-day4-recursion.ipynb  dsa-day4-recursion.md  dsa-day5-hashmaps.ipynb  dsa-day5-hashmaps.md  dsa-day6-practice.ipynb  dsa-day6-practice.md  dsa-learning-plan.md
enterprise-agent-system/: README.md
gen-ai/: embedding-models-comprehensive-guide.md  ibm-watsonx-orchestrate-interview-guide.md  llm-as-a-judge-complete-guide.md  llm-fundamentals-part1-tokenization-context.md  llm-fundamentals-part2-inference-optimization.md  llm-production-complete-guide.md  lora-qlora-finetuning-guide.ipynb  production-rag-systems-guide.md  rag-evaluation-complete-guide.md  weaviate-complete-guide-old.md  weaviate-complete-guide.md  weaviate-hands-on-guide.ipynb
langgraph/: README.md  generate_follow_along.py  generate_notebooks.py  module-01-follow-along.ipynb  module-01-fundamentals.md  module-01-practice.ipynb  module-02-follow-along.ipynb  module-02-practice.ipynb  module-02-state-management.md  module-03-advanced-control-flow.md  module-03-follow-along.ipynb  module-03-practice.ipynb  module-04-follow-along.ipynb  module-04-human-in-the-loop-patterns.md  module-04-practice.ipynb  module-05-follow-along.ipynb  module-05-persistence-and-memory.md  module-05-practice.ipynb  module-06-follow-along.ipynb  module-06-practice.ipynb  module-06-production-deployment.md  module-07-advanced-patterns-and-optimization.md  module-07-follow-along.ipynb  module-07-practice.ipynb  module-08-follow-along.ipynb  module-08-multi-agent-systems.md  module-08-practice.ipynb
ml/: ML-CODING-INTERVIEW-MASTER-GUIDE.md  anomaly-detection-complete-guide-part1.md  anomaly-detection-complete-guide-part2.md  clustering-complete-guide-part1.md  clustering-complete-guide-part2.md  feature-engineering-guide.md  linear-regression-complete-guide.md  (+6 more)
python-oop-masterclass/enterprise-agent-system/: .dockerignore  .env.example  00-SYSTEM-DESIGN.md  API_GUIDE.md  CLEAN_CODE_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROGRESS.md  QA_ASSESSMENT_UPDATED.md  QA_BUG_REPORT.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
python-oop-masterclass/enterprise-agent-system/k8s/: api-deployment.yaml  celery-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml
python-oop-masterclass/enterprise-agent-system/monitoring/: prometheus.yml
python-oop-masterclass/enterprise-agent-system/scripts/: init-db.sql  run-tests.sh  start-dev.sh
python-oop-masterclass/enterprise-agent-system/src/: __init__.py  config.py
python-oop-masterclass/enterprise-agent-system/src/agents/: __init__.py  graph.py  integration.py  nodes.py  state.py
python-oop-masterclass/enterprise-agent-system/src/api/: __init__.py  main.py  models.py  models_enhanced.py
python-oop-masterclass/enterprise-agent-system/src/domain/: __init__.py  entities.py  exceptions.py  models.py  types.py  value_objects.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/: __init__.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/celery/: __init__.py  app.py  config.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/celery/tasks/: __init__.py  analytics.py  embedding.py  maintenance.py  notifications.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/kafka/: __init__.py  consumer.py  events.py  producer.py  topics.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/mcp/: __init__.py  base.py
python-oop-masterclass/enterprise-agent-system/src/infrastructure/mcp/servers/: __init__.py  crm.py  knowledge_base.py
python-oop-masterclass/enterprise-agent-system/src/memory/: __init__.py  manager.py  redis_cache.py  vector_store.py
python-oop-masterclass/enterprise-agent-system/tests/: conftest.py
python-oop-masterclass/enterprise-agent-system/tests/e2e/: test_end_to_end.py
python-oop-masterclass/enterprise-agent-system/tests/integration/: test_api.py  test_workflow.py
python-oop-masterclass/enterprise-agent-system/tests/unit/: test_domain_models.py  test_state_management.py
(+108 files in other folders)
