[project]
name = "enterprise-agent-system"
version = "1.0.0"
description = "Production-ready multi-agent AI system built with LangGraph"
authors = [
    {name = "Enterprise AI Team", email = "ai-team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
keywords = ["ai", "agents", "langgraph", "langchain", "multi-agent", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Framework
    "langgraph>=0.2.0,<0.3.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchain-core>=0.1.0,<0.2.0",
    "langchain-community>=0.0.20,<0.1.0",

    # API Framework
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "websockets>=12.0,<13.0",
    "python-multipart>=0.0.9,<0.1.0",

    # Databases
    "weaviate-client>=4.4.0,<5.0.0",
    "redis>=5.0.0,<6.0.0",
    "hiredis>=2.3.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",

    # Event Streaming
    "kafka-python>=2.0.0,<3.0.0",
    "aiokafka>=0.10.0,<0.11.0",

    # Async Task Queue
    "celery>=5.3.0,<6.0.0",
    "flower>=2.0.0,<3.0.0",
    "kombu>=5.3.0,<6.0.0",

    # Monitoring
    "prometheus-client>=0.19.0,<0.20.0",
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<0.44",
    "opentelemetry-instrumentation-redis>=0.43b0,<0.44",
    "opentelemetry-instrumentation-asyncpg>=0.43b0,<0.44",
    "opentelemetry-exporter-jaeger>=1.22.0,<2.0.0",
    "structlog>=24.1.0,<25.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "httpx>=0.26.0,<0.27.0",
    "tenacity>=8.2.0,<9.0.0",
    "pyyaml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "hypothesis>=6.98.0,<7.0.0",
    "faker>=22.0.0,<23.0.0",

    # Type Checking
    "mypy>=1.8.0,<2.0.0",
    "types-redis>=4.6.0,<5.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",

    # Formatting & Linting
    "black>=24.1.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "pylint>=3.0.0,<4.0.0",
    "autopep8>=2.0.4,<3.0.0",

    # Security
    "bandit>=1.7.7,<2.0.0",
    "safety>=3.0.0,<4.0.0",

    # Complexity
    "radon>=6.0.0,<7.0.0",
    "mccabe>=0.7.0,<0.8.0",

    # Development Tools
    "ipython>=8.20.0,<9.0.0",
    "ipdb>=0.13.13,<0.14.0",
    "rich>=13.7.0,<14.0.0",
]

docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.24.0,<0.25.0",
]

infra = [
    "kubernetes>=29.0.0,<30.0.0",
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/enterprise-agent-system"
Documentation = "https://enterprise-agent-system.readthedocs.io"
Repository = "https://github.com/your-org/enterprise-agent-system"
Issues = "https://github.com/your-org/enterprise-agent-system/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "weaviate.*",
    "kafka.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]
